tests/invalid/annotation_dict_single_arg/main.py
def run_case() -> None:
    bad: dict[int] = {}


if __name__ == "__main__":
    run_case()
